@@ -23,11 +23,9 @@ long long a = 0x1234567800000000LL;
 void
 testTortureExecute (void)
 {
-// TODO: Enable when long long comes to these ports!
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
-#ifndef __SDCC_gbz80
+// TODO: Enable when long long literals are supported!
+#if 0
   f (a);
   return;
-#endif
 #endif
 }
